--- a/大学物理学/16 量子力学假设.md
+++ b/大学物理学/16 量子力学假设.md
@@ -175,9 +175,26 @@ $$
 
 **最大贡献**：提出**定态**与**能级**概念，成为从经典物理通向量子物理的桥梁。
 
-**尼尔斯·玻尔**（N. Bohr, 1885–1962）  
-丹麦人，哥本哈根学派领袖；提出对应原理、互补原理；获 1922 年诺贝尔物理学奖。
 # 16.5 粒子的波动性 德布罗意波
+1924 年，法国博士研究生、青年物理学家德布罗意在爱因斯坦光量子理论的启发下，在他的博士论文中提出了与光的波粒二象性完全对称的设想，即实物粒子也具有波动性。  
+
+一个质量为 $m$、速度为 $v$ 的粒子，具有能量 $E$、动量 $p$。  
+假设：  
+该粒子同时具有波长 $\lambda$、频率 $\nu$。  
+
+$$E=mc^2=h\nu$$  
+
+类比于爱因斯坦关系，也应该有  
+
+$$p=mv=\frac{h}{\lambda}$$  
+
+德布罗意得到公式  
+
+$$\lambda=\frac{h}{p}=\frac{h}{mv}$$  
+
+这种实物粒子的波就称为  **“德布罗意波”**或**“物质波”。**  
+
+必须对实物粒子做出类似于光的干涉、衍射实验，才能证明实物粒子具有波动性。  
 
 # 16.6 不确定关系
 
