--- a/模拟电子技术基础/02 基本放大电路.md
+++ b/模拟电子技术基础/02 基本放大电路.md
@@ -112,14 +112,72 @@ $$
 $$
 # 2.4 放大电路静态工作点的稳定
 ## 一、温度对静态工作点的影响
-
+在引起 Q 点不稳定的诸多因素中，温度对晶体管参数的影响是人为难以解决的。  
+当环境温度升高时：  
+1. 电流放大系数$β$增大；  
+2. 穿透电流 $I_{CEO}$ 增大；  
+3. 集中表现为集电极电流 $I_{CQ}$ 明显增大；  
+4. 共射电路中晶体管的管压降 $U_{CEQ}$ 将减小；  
+5. Q 点沿直流负载线上移到 Q′，向饱和区变化；  
+6. 欲使之回到原来位置，必须减小基极电流 $I_{BQ}$。  
+当温度降低时，Q 点将沿直流负载线下移，向截止区变化，必须增大 $I_{BQ}$ 才能维持 Q 点基本不变。  
+结论：稳定 Q 点，通常是指在环境温度变化时静态集电极电流 $I_{CQ}$ 和管压降 $U_{CEQ}$ 基本不变，即 Q 点在晶体管输出特性坐标平面中的位置基本不变；必须依靠 $I_{BQ}$ 的变化来抵消 $I_{CQ}$ 和 $U_{CEQ}$ 的变化。
 ## 二、稳定原理
-![](assets/2.4.2.png)
+1. 电路组成与 Q 点稳定原理  
+	1. 电路形式  
+		图 2.4.2 (a) 直接耦合方式；  
+		图 2.4.2 (b) 阻容耦合方式；  
+		二者具有相同的直流通路，如图 2.4.2 (c) 所示。 
+		![](assets/2.4.2.png)
+	2. 参数选取条件  
+		   为稳定 Q 点，通常使  I_1 ≫ I_BQ  (2.4.1)  于是 I_2≈I_1，基极电位  U_BQ ≈ (R_b 2)/(R_b 1+R_b 2)·V_CC  (2.4.2)  式 (2.4.2) 表明 U_BQ 几乎仅由 R_b 1、R_b 2 对 V_CC 分压决定，与温度无关。
+	3. 温度稳定性自动调节过程  
+		   $T (℃)↑ → I_C↑ → I_E↑ → U_E↑ (因 U_BQ 基本不变) → U_BE↓ → I_B↓ → I_C↓$
+		   结果：I_C 随温度升高而增大的部分几乎被因 I_B 减小而减小的部分抵消，I_C、U_CE 基本不变，Q 点位置基本不变。  
+	4. 反馈性质  
+		   R_e 将输出量 (I_C) 的变化转化为电压变化引回输入回路影响输入量 (U_BE)，使输出量变化减小——直流负反馈；R_e 为直流负反馈电阻。  
+
+3. 静态工作点的估算  
+	已知条件：I_1≫I_BQ  
+	1. 基极电位  
+		U_BQ = (R_b 2)/(R_b 1+R_b 2)·V_CC  
+	2. 发射极电流  
+		I_EQ = (U_BQ - U_BEQ)/R_e  (2.4.3)  
+	3. 管压降  
+		U_CEQ ≈ V_CC - I_CQ (R_c + R_e)  (2.4.4)  
+	4. 基极电流  
+		I_BQ = I_CQ/(1+β)  (2.4.5)  
+
+5. 动态参数的估算  
+	1. 有旁路电容 C_e（图 2.4.4 a）  
+		电压放大倍数  
+		A_u = -β(R_c // R_L)/r_be  (2.4.6 a)  
+		输入电阻  
+		R_i = R_b 1 // R_b 2 // r_be  (2.4.6 b)  
+		输出电阻  
+		R_o = R_c  (2.4.6 c)  
+	2. 无旁路电容 C_e（图 2.4.4 b）  
+		电压放大倍数  
+		A_u = -β(R_c // R_L)/[r_be + (1+β) R_e]  (2.4.7 a)  
+		输入电阻  
+		R_i = R_b 1 // R_b 2 // [r_be + (1+β) R_e]  (2.4.7 b)  
+		输出电阻  
+		R_o = R_c  (2.4.7 c)  
+	3. 近似条件  
+		若 (1+β) R_e≫r_be 且β≫1，则  
+		|A_u| ≈ (R_c // R_L)/R_e  (2.4.8)  
+		此时电压放大倍数几乎仅取决于电阻取值，受温度影响很小，温度稳定性好。  
 ## 三、Q 点分析
 
+1. 直流负反馈——典型电路已述。  
+2. 温度补偿  
+（1）利用二极管反向特性（图 2.4.6 a）  
+温度↑ → I_R↑ → I_D↑ → I_B↓ → I_C↓，抵消 I_C 的增大。 
+（2）利用二极管正向压降（图 2.4.6 b）  
+温度↑ → U_D↓ → U_B↓ → U_BE↓ → I_B↓ → I_C↓，同时具有直流负反馈作用。
 # 2.5 晶体管单管放大电路的三种基本接法
 ## 一、基本共集放大电路
-![](assets/2.5.1)
+![](assets/2.5.1.png)
 1. 静态分析
 2. 动态分析
    - 输入电阻的分析
