feat: 更新线性表概念及其抽象数据类型定义，新增工程训练相关文件

--- a/C语言数据结构/02 线性表.md
+++ b/C语言数据结构/02 线性表.md
@@ -1,5 +1,7 @@
 # 2.1 线性表的概念及其抽象数据类型定义
 ## 2.1.1 线性表的逻辑结构
+**线性表(Linear List) 描述**：线性表是 n 个类型相同数据元素的有限序列，对 n>O，除第一元素无直接前驱、最后一个元素无直接后继外，其余的每个数据元素只有一个直接前驱和一个直接后继
+在一般的线性表中，一个**数据元素(Data Elements)** 可由若干数据项组成，如表 1. 1 所示的学籍表中，每个学生相关信息由学号、姓名、性别、籍，贯等数据项组成，表 1. 1 中的一行称为一个**记录（或称数据元素）**，含有大量类型相同记录的线性表称为**文件（或称数据对象）**
 ## 2.1.2 线性表的抽象数据类型定义
 # 2.2 线性表的顺序存储
 ## 2.2.1 线性表的顺序存储结构
