feat: 添加完全二叉树的性质及证明

--- a/C语言数据结构/06 树与二叉树.md
+++ b/C语言数据结构/06 树与二叉树.md
@@ -107,6 +107,16 @@ $n0 - 1 = n2$
 2. 完全二叉树：如果一棵二叉树的每一层（除最后一层外）都被完全填满，并且最后一层的叶结点都集中在该层的左侧，则称该二叉树为完全二叉树（Complete Binary Tree）。
 ![](assets/6.6.png)
 - 性质4：具有n个结点的完全二叉树的高度为$⌊log_2 n⌋ + 1$。
+证明：
+假设n个结点的完全二叉树的高度为h，则根据完全二叉树的定义，前h-1层都是满的，因此前h-1层的结点数为：
+$N_{h-1} = 2^0 + 2^1 + 2^2 + ... + 2^{h-2} = 2^{h-1} - 1$
+最后一层的结点数最多（满二叉树）为$2^{h-1}$，因此有：
+$n ≤ N_{h-1} + 2^{h-1} = 2^h - 1$
+显然有：
+$2^{h-1} - 1 < n ≤ 2^{h} - 1$
+解得：
+$h ≥ ⌊log_2 n⌋ + 1$
+另一方面，完全二叉树的高度h也不能超过$⌊log_2 n⌋ + 1$，否则结点数将超过n。因此，性质4成立。
 - 性质5：对于具有n个结点的完全二叉树，如果按照从上到下和从左到右的顺序对二叉树中的所有结点从 1 开始顺序编号，则对于任意的序号为 i 的结点有：
   1. 若i=1，则该结点为根结点；
   2. 若i>1，则该结点的双亲结点的序号为$⌊i/2⌋$；
